test/runtime/fail/closure/missing_args.hy

// expect error: Expected `\(` after function name in declaration

let a = fn {
	// ...
}
